force-app/src/objects/cpm__PaymentHub_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>cpm__Analytics_Last_Run_Date__c</fullName>
        <label>Analytics Last Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Auto_Create_Mandate_Recurring_Payment_DD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true a mandate will be created when an Recurring or Single Payment is created of type Direct Debit which doesn&apos;t already has a relationship to a Mandate</description>
        <inlineHelpText>Wanneer aangevinkt zal er een mandaat aangemaakt worden wanneer een terugkerende betaling van het type automatische incasso gemaakt wordt en deze nog geen relatie met een mandaat heeft</inlineHelpText>
        <label>Autocreate mandate for Direct Debits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Can_Deploy_Mandate_Dependency__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, we now FinDock is installed with the correct dependecy</description>
        <label>Can Deploy Mandate Dependency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Collect_Open_Amount_enabled_date__c</fullName>
        <label>Collect Open Amount enabled date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpm__Contact_Analytics_Last_Run_Date__c</fullName>
        <label>Contact Analytics Last Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__EnforceUserMode__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enforces USER_MODE for DML and SOQL queries (Deprecated)</description>
        <label>Enforce UserMode (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Enforce_Payment_Profile_Uniqueness__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enforce Payment Profile Uniqueness</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Execute_Initial_Permission_Set_Adding__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Execute Initial Permission Set Adding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__GenerateInstallmentsFromHeartbeat__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Generate installments for recurring payments with FinDock Heart Beat.</description>
        <inlineHelpText>Set this to True to automatically generate future installments for Recurring Payment records with FinDock Heart Beat.</inlineHelpText>
        <label>Generate Installments From Heartbeat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Change_Setup_Made__c</fullName>
        <label>Last Change Setup Made</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Deploy_Setup_Made__c</fullName>
        <label>Last Deploy Setup Made</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Used_Recalculation_Date__c</fullName>
        <label>Last Used Recalculation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Mandate_Reference__c</fullName>
        <label>Mandate Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Manual_Review_Default_Payment_Method__c</fullName>
        <label>Manual Review Default Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Collection_Use_Open_Amount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable to collect Installment Amount Open for SEPA DD with FinDock as native processor. When disabled, Installment Amount is used in payment instructions to banks and PSPs.</description>
        <inlineHelpText>Enable to collect Installment Amount Open for SEPA DD with FinDock as native processor. When disabled, Installment Amount is used in payment instructions to banks and PSPs.</inlineHelpText>
        <label>Collect Amount Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Request_Async__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled the Payemtn Request Generator Run batch will fire queueable instead of running in batch</description>
        <label>Payment Request Async</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__QueueableGenerationEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enhanced performance BETA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Re_use_existing_mandate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>re-use existing mandate if available</description>
        <label>Reuse existing mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Security_Service_in_Unit_Tests_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>deprecated</description>
        <label>Security Srv in Unit Tests (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Setup_Deploy_Batch_Id__c</fullName>
        <label>Setup Deploy Batch Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__SiteURL__c</fullName>
        <label>SiteURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>cpm__Store_Informal_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Store Informal Logs</label>
        <type>Checkbox</type>
    </fields>
    <label>PaymentHub Settings</label>
</CustomObject>